[package]
name = "infrablockspace-cli"
description = "InfraBlockspace Relay-chain Client Node"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.9", features = ["derive"], optional = true }
log = "0.4.17"
thiserror = "1.0.31"
futures = "0.3.21"
pyro = { package = "pyroscope", version = "0.3.1", optional = true }

service = { package = "infrablockspace-service", path = "../node/service", default-features = false, optional = true }
infrablockspace-client = { path = "../node/client", optional = true }
infrablockspace-node-core-pvf = { path = "../node/core/pvf", optional = true }

sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", optional = true }
try-runtime-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", optional = true }
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", optional = true }
sc-service = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", optional = true }
infrablockspace-node-metrics = { path = "../node/metrics" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", optional = true }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-storage-monitor = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[features]
default = ["db", "cli", "full-node", "infrablockspace-native"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"infrablockspace-client",
	"infrablockspace-node-core-pvf",
]
runtime-benchmarks = [
	"service/runtime-benchmarks",
	"infrablockspace-node-metrics/runtime-benchmarks",
]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["service/fast-runtime"]
pyroscope = ["pyro"]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
infrablockspace-native = ["service/infrablockspace-native"]
rococo-native = ["service/rococo-native"]

malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "infrablockspace-node-metrics/runtime-metrics"]
