[package]
name = "infrablockspace-core-primitives"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.3.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"scale-info/std",
	"parity-scale-codec/std",
]
