[package]
name = "infrablockspace-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
primitives = { package = "infrablockspace-primitives", path = "../primitives" }
