[package]
name = "infrablockspace-node-jaeger"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Infrabs Jaeger primitives, but equally useful for Grafana/Tempo"

[dependencies]
mick-jaeger = "0.1.8"
lazy_static = "1.4"
parking_lot = "0.12.0"
infrablockspace-primitives = { path = "../../primitives" }
infrablockspace-node-primitives = { path = "../primitives" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
thiserror = "1.0.31"
tokio = "1.24.2"
log = "0.4.17"
parity-scale-codec = { version = "3.3.0", default-features = false }
