[package]
name = "infrablockspace-test-malus"
description = "Misbehaving nodes for local testnets, system and Simnet tests."
license = "GPL-3.0-only"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "malus"
path = "src/malus.rs"

[dependencies]
infrablockspace-cli = { path = "../../cli", features = [
    "malus",
    "rococo-native",
    "infrablockspace-native",
] }
infrablockspace-node-subsystem = { path = "../subsystem" }
infrablockspace-node-subsystem-util = { path = "../subsystem-util" }
infrablockspace-node-subsystem-types = { path = "../subsystem-types" }
infrablockspace-node-core-dispute-coordinator = { path = "../core/dispute-coordinator" }
infrablockspace-node-core-candidate-validation = { path = "../core/candidate-validation" }
infrablockspace-node-core-backing = { path = "../core/backing" }
infrablockspace-node-primitives = { path = "../primitives" }
infrablockspace-primitives = { path = "../../primitives" }
infrablockspace-node-core-pvf = { path = "../core/pvf" }
color-eyre = { version = "0.6.1", default-features = false }
assert_matches = "1.5"
async-trait = "0.1.57"
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../gum/" }
erasure = { package = "erasure-coding", path = "../../erasure-coding" }
rand = "0.8.5"

[features]
default = []

[dev-dependencies]
infrablockspace-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
futures = { version = "0.3.21", features = ["thread-pool"] }
