[package]
name = "infrablockspace-service"
rust-version = "1.60"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
babe = { package = "sc-consensus-babe", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
beefy = { package = "sc-consensus-beefy", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
mmr-gadget = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-mmr-primitives = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-client-db = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-consensus-slots = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-common = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-sync = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-offchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
service = { package = "sc-service", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
consensus_common = { package = "sp-consensus", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
grandpa_primitives = { package = "sp-consensus-grandpa", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
inherents = { package = "sp-inherents", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-storage = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-trie = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
pallet-im-online = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
pallet-staking = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
gum = { package = "tracing-gum", path = "../gum/" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.17.0", optional = true }
parity-db = { version = "0.4.4", optional = true }

async-trait = "0.1.57"
lru = "0.9"
log = "0.4.17"

# Infrablockspace
infrablockspace-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
infrablockspace-overseer = { path = "../overseer" }
infrablockspace-client = { path = "../client", default-features = false, optional = true }
infrablockspace-parachain = { path = "../../parachain" }
infrablockspace-primitives = { path = "../../primitives" }
infrablockspace-node-primitives = { path = "../primitives" }
infrablockspace-rpc = { path = "../../rpc" }
infrablockspace-node-subsystem = { path = "../subsystem" }
infrablockspace-node-subsystem-util = { path = "../subsystem-util" }
infrablockspace-node-subsystem-types = { path = "../subsystem-types" }
infrablockspace-runtime-parachains = { path = "../../runtime/parachains" }
infrablockspace-node-network-protocol = { path = "../network/protocol" }

# Polkadot Runtime Constants
infrablockspace-runtime-constants = { path = "../../runtime/infrablockspace/constants", optional = true }
rococo-runtime-constants = { path = "../../runtime/rococo/constants", optional = true }

# Polkadot Runtimes
infrablockspace-runtime = { path = "../../runtime/infrablockspace", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

# Infrablockspace Subsystems
infrablockspace-approval-distribution = { path = "../network/approval-distribution", optional = true }
infrablockspace-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
infrablockspace-availability-distribution = { path = "../network/availability-distribution", optional = true }
infrablockspace-availability-recovery = { path = "../network/availability-recovery", optional = true }
infrablockspace-collator-protocol = { path = "../network/collator-protocol", optional = true }
infrablockspace-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
infrablockspace-gossip-support = { path = "../network/gossip-support", optional = true }
infrablockspace-network-bridge = { path = "../network/bridge", optional = true }
infrablockspace-node-collation-generation = { path = "../collation-generation", optional = true }
infrablockspace-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
infrablockspace-node-core-av-store = { path = "../core/av-store", optional = true }
infrablockspace-node-core-backing = { path = "../core/backing", optional = true }
infrablockspace-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
infrablockspace-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
infrablockspace-node-core-chain-api = { path = "../core/chain-api", optional = true }
infrablockspace-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
infrablockspace-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
infrablockspace-node-core-provisioner = { path = "../core/provisioner", optional = true }
infrablockspace-node-core-pvf-checker = { path = "../core/pvf-checker", optional = true }
infrablockspace-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
infrablockspace-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
infrablockspace-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
assert_matches = "1.5.0"
tempfile = "3.2"

[features]
default = ["db", "full-node", "infrablockspace-native"]

db = ["service/rocksdb"]

full-node = [
	"infrablockspace-node-core-av-store",
	"infrablockspace-node-core-approval-voting",
	"infrablockspace-availability-bitfield-distribution",
	"infrablockspace-availability-distribution",
	"infrablockspace-availability-recovery",
	"infrablockspace-client",
	"infrablockspace-collator-protocol",
	"infrablockspace-dispute-distribution",
	"infrablockspace-gossip-support",
	"infrablockspace-network-bridge",
	"infrablockspace-node-collation-generation",
	"infrablockspace-node-core-backing",
	"infrablockspace-node-core-bitfield-signing",
	"infrablockspace-node-core-candidate-validation",
	"infrablockspace-node-core-chain-api",
	"infrablockspace-node-core-chain-selection",
	"infrablockspace-node-core-dispute-coordinator",
	"infrablockspace-node-core-provisioner",
	"infrablockspace-node-core-runtime-api",
	"infrablockspace-statement-distribution",
	"infrablockspace-approval-distribution",
	"infrablockspace-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
infrablockspace-native = ["infrablockspace-runtime", "infrablockspace-runtime-constants", "infrablockspace-client/infrablockspace"]
rococo-native = ["rococo-runtime", "rococo-runtime-constants", "infrablockspace-client/rococo"]

runtime-benchmarks = [
	"infrablockspace-runtime?/runtime-benchmarks",
	"rococo-runtime?/runtime-benchmarks",
	"service/runtime-benchmarks",
]
try-runtime = [
	"infrablockspace-runtime?/try-runtime",
	"rococo-runtime?/try-runtime",
]
fast-runtime = [
	"infrablockspace-runtime?/fast-runtime",
	"rococo-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"rococo-runtime?/runtime-metrics",
	"infrablockspace-runtime?/runtime-metrics",
]
