[package]
name = "infrablockspace-node-subsystem-types"
description = "Subsystem traits and message definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
infrablockspace-primitives = { path = "../../primitives" }
infrablockspace-node-primitives = { path = "../primitives" }
infrablockspace-node-network-protocol = { path = "../network/protocol" }
infrablockspace-statement-table = { path = "../../statement-table" }
infrablockspace-node-jaeger = { path = "../jaeger" }
orchestra = "0.0.4"
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-authority-discovery = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
smallvec = "1.8.0"
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
thiserror = "1.0.31"
async-trait = "0.1.57"
