[package]
name = "infrablockspace-node-subsystem"
description = "Subsystem traits and message definitions and the generated overseer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
infrablockspace-overseer = { path = "../overseer" }
infrablockspace-node-subsystem-types = { path = "../subsystem-types" }
infrablockspace-node-jaeger = { path = "../jaeger" }
